--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -78,7 +78,6 @@
 	padding: 5px 10px;
 	background-color: var(--brand-color);
 	border-radius: 10px;
-	transition-behavior: allow-discrete;
 }
 
 .title {
@@ -122,7 +121,7 @@
 		position: absolute;
 		z-index: -1;
 		inset: 0;
-		background: linear-gradient(136deg, #ffffff5e 0%, #ffffff5e 100%);
+		background: linear-gradient(113deg, rgb(255 255 255 / 30%) 10%, rgb(255 255 255 / 0%) 100%);
 		border: 2px solid var(--text-color);
 		border-radius: 32px;
 		content: "";
