--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -33,21 +33,33 @@ html {
 	font-family: var(--font-family), sans-serif;
 	line-height: 1.5;
 	background-color: #1a1e1c;
-
-	// background-image: image-set(
-	// 	url("../img/site_bg.jpg?as=avif") type("image/avif"),
-	// 	url("../img/site_bg.jpg?as=webp") type("image/webp"),
-	// 	url("../img/site_bg.jpg")
-	// );
-	background-repeat: no-repeat;
-	background-position: center 0;
-	background-size: cover;
 	border: 0;
 
 	&.menu-active {
 		overflow-y: hidden;
 
 		// padding-right: 10px;
+	}
+
+	&::before {
+		position: absolute;
+		z-index: -1;
+		inset: 0;
+		width: 100%;
+		height: 100%;
+		background-image: image-set(
+			url("../img/site_bg.jpg?as=avif") type("image/avif"),
+			url("../img/site_bg.jpg?as=webp") type("image/webp"),
+			url("../img/site_bg.jpg")
+		);
+		background-repeat: no-repeat;
+		background-position: center -150px;
+		background-size: cover;
+		content: "";
+
+		@include t {
+			display: none;
+		}
 	}
 }
 
