--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -171,18 +171,23 @@
 		@include list;
 
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+		grid-template-columns: repeat(4, 1fr);
 		gap: clamp(12px, vwt(32px), 32px);
 		justify-content: space-between;
-		padding: clamp(12px, vwbt(64px), 64px);
+		padding: clamp(12px, vwc(64px), 64px);
 		background-color: #3d544d3d;
 		border-radius: 32px;
 		backdrop-filter: blur(16px);
 
-		@include sm {
-			grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+		@include m {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
 			max-width: 100%;
 			margin: 0 auto;
+		}
+
+		@include xsm {
+			grid-template-columns: 1fr;
 		}
 	}
 
