--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -184,9 +184,14 @@
 		bottom: 36px;
 	}
 
+	.card__use {
+		position: relative;
+	}
+
 	// .card__text-number
 	&__text-number {
-		display: block;
+		position: relative;
+		display: inline-block;
 		margin-bottom: 14px;
 		font-weight: 600;
 		font-size: 14px;
@@ -210,6 +215,7 @@
 
 	// .card__number
 	&__number {
+		position: relative;
 		color: var(--white);
 		font-weight: 700;
 		font-size: 32px;
@@ -233,6 +239,7 @@
 
 	// .card__text
 	&__text {
+		position: relative;
 		font-weight: 600;
 		font-size: 14px;
 
@@ -247,6 +254,7 @@
 
 	// .card__name
 	&__name {
+		position: relative;
 		color: var(--white);
 		font-weight: 500;
 		font-size: 12px;
@@ -262,6 +270,7 @@
 
 	// .card__date
 	&__date {
+		position: relative;
 		color: var(--white);
 		font-weight: 600;
 		font-size: 12px;
@@ -333,6 +342,19 @@
 	}
 }
 
+.emergence {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(113deg, rgb(255 255 255 / 30%) 10%, rgb(255 255 255 / 0%) 100%);
+	border-radius: 5px;
+	backdrop-filter: blur(3px);
+	animation: emergance 1s ease-out forwards;
+	animation-delay: calc(0.3s * var(--i));
+}
+
 .active .card-design-block--first {
 	transform: translateY(-180px) translateX(-70px) scale(0.8) rotateX(20deg) rotateY(-10deg) rotateZ(0deg);
 	opacity: 1;
@@ -355,4 +377,10 @@
 .active .card-find-block--second {
 	transform: translateY(30px) translateX(-10px) translateZ(-40px) scale(0.8) rotateX(20deg) rotateY(30deg) rotateZ(0deg)
 		skewX(10deg);
+}
+
+@keyframes emergance {
+	100% {
+		width: 0;
+	}
 }
