--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -52,10 +52,10 @@ html {
 		inset: 0;
 		width: 100%;
 		height: 100%;
-		background: image-set(
+		background-image: image-set(
 			url("../img/site_bg.jpg?as=avif") type("image/avif"),
 			url("../img/site_bg.jpg?as=webp") type("image/webp"),
-			url("../img/site_bg.jpg")
+			url("../img/site_bg.jpg") type("image/jpeg")
 		);
 		background-repeat: no-repeat;
 		background-position: center -150px;
