--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -15,6 +15,10 @@
 		content: "";
 	}
 
+	&::after {
+		transform: rotate(90deg);
+	}
+
 	// .accordion__btn
 	&__btn {
 		width: 100%;
@@ -53,6 +57,6 @@
 
 .accordion-active {
 	&::after {
-		transform: rotate(90deg);
+		transform: rotate(0deg);
 	}
 }
